[afc] Add x-content types for AFC backend

https://bugzilla.gnome.org/show_bug.cgi?id=597805